--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -15,5 +15,12 @@
         }
       }
     }
+  },
+  "hosting": {
+    "amplifyhosting": {
+      "service": "amplifyhosting",
+      "type": "cicd",
+      "lastPushTimeStamp": "2022-02-23T05:28:26.014Z"
+    }
   }
 }
